Fix Scheduler multithreaded send.